--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yoga with Sheetal</title>
     <link rel="shortcut icon" href="./src/assets/images/Favicom/icon.png" type="image/x-icon" />
+    <script src="https://kit.fontawesome.com/ddabbe50a1.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
